--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
+    "release-please": "^16.15.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
