--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,5 +7,6 @@
       }
     },
     "include-v-in-tag": true,
+    "include-component-in-tag": false,
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
