--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
+      - uses: pnpm/action-setup@v4
       - run: pnpm build
       - run: pnpm publish
         env:
