--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
       - uses: pnpm/action-setup@v4
+        with:
+          run_install: true
       - run: pnpm build
       - run: pnpm publish
         env:
