fix: fix package build (remove git check from pnpm publish)

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           run_install: true
       - run: pnpm build
-      - run: pnpm publish
+      - run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_ACTIONS_TOKEN }}
