--- a/package.json
+++ b/package.json
@@ -1,43 +1,72 @@
 {
   "name": "@meow-meow-dev/shared-configs",
+  "version": "1.3.0",
+  "description": "",
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/meow-meow-dev/shared-configs.git"
+  },
+  "license": "MIT",
+  "author": "Jérôme <jerome@meow-meow.dev>",
+  "type": "module",
+  "exports": {
+    "./eslint": "./dist/eslint/index.mjs",
+    "./prettier": "./dist/prettier/index.mjs"
+  },
   "files": [
     "dist"
   ],
-  "version": "1.3.0",
-  "description": "",
-  "exports": {
-    "./prettier": "./dist/prettier.config.js"
-  },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup-node",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky",
-    "prettier:check": "prettier . --check"
-  },
-  "keywords": [],
-  "author": "Jérôme <jerome@meow-meow.dev>",
-  "license": "MIT",
-  "devDependencies": {
-    "@commitlint/config-conventional": "^19.6.0",
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "husky": "^9.1.7",
-    "prettier": "^3.4.2",
-    "release-please": "^16.15.0",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "prettier:check": "prettier . --check",
+    "prettier:fix": "prettier . --write",
+    "qa": "pnpm lint:check && pnpm prettier:check && pnpm tsc:check",
+    "tsc:check": "tsc -noEmit"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/meow-meow-dev/shared-configs.git"
-  },
-  "type": "module",
-  "packageManager": "pnpm@9.14.2",
   "dependencies": {
     "commitlint": "^19.6.1"
-  }
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.17.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.2",
+    "@vitest/eslint-plugin": "^1.1.24",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.17.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-no-relative-import-paths": "^1.5.5",
+    "eslint-plugin-package-json": "^0.19.0",
+    "eslint-plugin-perfectionist": "^4.6.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
+    "react": "^19.0.0",
+    "release-please": "^16.15.0",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0"
+  },
+  "packageManager": "pnpm@9.14.2"
 }
