fix: move eslint plugins to peerDependencies, add .mjs extension to typescript resolver

--- a/package.json
+++ b/package.json
@@ -47,15 +47,25 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/js": "^9.17.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
-    "@vitest/eslint-plugin": "^1.1.24",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.17.0",
     "eslint-import-resolver-typescript": "^3.7.0",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
+    "react": "^19.0.0",
+    "release-please": "^16.15.0",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
+  },
+  "peerDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@vitest/eslint-plugin": "^1.1.24",
+    "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
@@ -68,14 +78,6 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unicorn": "^56.0.1",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "prettier": "^3.4.2",
-    "react": "^19.0.0",
-    "release-please": "^16.15.0",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0"
   },
   "packageManager": "pnpm@9.14.2"
