--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@eslint/js": "^9.17.0",
     "@vitest/eslint-plugin": "^1.1.24",
     "eslint": "^9.17.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
