--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@meow-meow-dev/shared-configs",
   "version": "1.4.5",
   "description": "",
-  "keywords": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/meow-meow-dev/shared-configs.git"
@@ -43,42 +42,47 @@
     }
   },
   "dependencies": {
-    "commitlint": "^19.6.1"
+    "commitlint": "^19.7.1"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.20.0",
+    "@microsoft/api-extractor": "^7.50.0",
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.2",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.10",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitest/eslint-plugin": "^1.1.31",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "prettier": "^3.4.2",
-    "react": "^19.0.0",
-    "release-please": "^16.15.0",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
-  },
-  "peerDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@vitest/eslint-plugin": "^1.1.24",
-    "eslint": "^9.17.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint": "9.20.1",
+    "eslint-import-resolver-typescript": "^3.8.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.15.1",
-    "eslint-plugin-no-relative-import-paths": "^1.5.5",
-    "eslint-plugin-package-json": "^0.19.0",
-    "eslint-plugin-perfectionist": "^4.6.0",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
+    "eslint-plugin-package-json": "^0.26.0",
+    "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unicorn": "^56.0.1",
-    "typescript-eslint": "^8.19.0"
+    "globals": "^15.15.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.1",
+    "react": "^19.0.0",
+    "release-please": "^16.15.0",
+    "tsup": "^8.3.6",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   },
-  "packageManager": "pnpm@9.14.2"
+  "packageManager": "pnpm@10.2.1",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
+  }
 }
